Added multiplihedra Section 7.3

--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -499,6 +499,17 @@
 	PAGES = {x+349},
 }
 
+@article{DotsenkoShadrinVallette,
+  title = {Pre-{{Lie}} Deformation Theory},
+  author = {Dotsenko, Vladimir and Shadrin, Sergey and Vallette, Bruno},
+  year = {2016},
+  journal = {Moscow Mathematical Journal},
+  volume = {16},
+  number = {3},
+  pages = {505--543},
+  fjournal = {Moscow Mathematical Journal}
+}
+
 @article{palacios2004weak,
   title = {Weak {{Bruhat}} Order on the Set of Faces of the Permutohedron and the Associahedron},
   author = {Palacios, Patricia and Ronco, Mar{\'i}a O.},
