Finish multiplihedra modifications

--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -510,6 +510,12 @@
   fjournal = {Moscow Mathematical Journal}
 }
 
+@phdthesis{Doker,
+   AUTHOR = {Doker, Jeffrey Samuel},
+   TITLE = {Geometry of Generalized Permutohedra},
+   SCHOOL ={University of California, Berkeley},
+   YEAR = {2011},}
+
 @article{palacios2004weak,
   title = {Weak {{Bruhat}} Order on the Set of Faces of the Permutohedron and the Associahedron},
   author = {Palacios, Patricia and Ronco, Mar{\'i}a O.},
