--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -455,7 +455,7 @@ where~$\displaystyle F_{\ell,m} \eqdef \frac{1}{(\ell-1)m+1} \binom{\ell m}{m}$ 
 Finally, \cref{sec:facePoset} is dedicated to the combinatorial description of the face poset of~$\multiBraidArrangement$.
 We observe that the faces of~$\multiBraidArrangement$ are in bijection with certain \emph{ordered} $(\ell,n)$-partition forests, defined as $\ell$-tuples of ordered partitions of~$[n]$ whose underlying unordered partitions form an (unordered) $(\ell,n)$-partition forest (\cref{def:orderedPartitionForest}).
 Here, which ordered $(\ell,n)$-partition forests actually appear as faces of~$\multiBraidArrangement$ depends on the choice of the translations of the different copies.
-We provide a combinatorial description of the possible orderings of an $(\ell,n)$-partition forest compatible with some given translations in terms of certain paths in the forest (\cref{prop:PFtoOPF1,prop:PFtoOPF2}), and a combinatorial characterization of the ordered partition forests which appear for some given translations in terms of the circuits of a certain oriented graph (\cref{prop:characterizationOPFs}).
+We provide a combinatorial description of the possible orderings of a $(\ell,n)$-partition forest compatible with some given translations in terms of certain paths in the forest (\cref{prop:PFtoOPF1,prop:PFtoOPF2}), and a combinatorial characterization of the ordered partition forests which appear for some given translations in terms of the circuits of a certain oriented graph (\cref{prop:characterizationOPFs}).
 
 %%%%%%%%%%%%%%%
 
@@ -533,11 +533,11 @@ The above theorem also allows us to translate the different combinatorial descri
 \end{figure}
 
 In \cref{sec:Shift-lattice}, we show that the facets of operadic diagonals are disjoint unions of lattices, that we call the \emph{shift lattices}.
-These lattices are product of chains, and are indexed by the permutations of $[n]$.
+These lattices are isomorphic to a product of chains, and are indexed by the permutations of $[n]$.
 Moreover, while the pairs of facets of operadic are intervals of the facial weak order (\cref{sec:facial-weak-order}), the shift lattices are not sub-lattices of this order's product (see \cref{fig: Inversion and lattice counter example}). 
 
 Finally, we present the alternative cubical (\cref{sec:Cubical}) and matrix (\cref{subsec:matrix}) descriptions of the $\SU$ diagonal from \cite{SaneblidzeUmble,SaneblidzeUmble-comparingDiagonals}, providing proofs of their equivalence with the other descriptions, and giving their $\LA$ counterparts. 
-The existence of this cubical description, based on a subdvision of the cube combinatorially isomorphic to the permutahedron, finds its conceptual root in the bar-cobar resolution of the associative permutad. 
+The existence of this cubical description, based on a subdivision of the cube combinatorially isomorphic to the permutahedron, finds its conceptual root in the bar-cobar resolution of the associative permutad. 
 Indeed, this resolution is encoded by the dual subdivision of the permutahedron, which is cubical since $\Perm$ is a simple polytope, and a diagonal can be obtained from the classical Serre diagonal via retraction, in the same fashion as for the associahedra, see \cite{MarklShnider} and \cite[Sec. 5.1]{LaplanteAnfossiMazuir}.
 
 %%%%%%%%%%%%%%%
@@ -584,9 +584,9 @@ Moreover, the pairs of faces in the image of the two operadic diagonals are in g
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section*{Aknowledgements}
+\section*{Acknowledgements}
 
-GLA is grateful to Hugh Thomas for raising the question to count the facets of the $\LA$ diagonal and for preliminary discussions during a visit at the LACIM in the summer of 2021 where the project started, and to the Max Planck Insitute for Mathematics in Bonn where part of this work was carried out.
+GLA is grateful to Hugh Thomas for raising the question to count the facets of the $\LA$ diagonal and for preliminary discussions during a visit at the LACIM in the summer of 2021 where the project started, and to the Max Planck Institute for Mathematics in Bonn where part of this work was carried out.
 We are grateful to Sylvie Corteel for pointing out the relevance of the dual perspective for the purpose of counting.
 VP is grateful to the organizers (Karim Adiprasito, Alexey Glazyrin, Isabella Novic, and Igor Pak) of the workshop ``Combinatorics and Geometry of Convex Polyhedra'' held at the Simons Center for Geometry and Physics in March 2023 for the opportunity to present a preliminary version of our enumerative results, and to  Pavel Galashin for asking about the characteristic polynomial of the multiple braid arrangement during this presentation.
 We thank Samson Saneblidze and Ron Umble for useful correspondence.
@@ -4394,9 +4394,10 @@ This follows directly from \cref{coro:enumerationDiagonalPermutahedra}, with the
 \label{sec:Cubical}
 
 In this section, we recall the cubical definition of the $\SU$ diagonal from~\cite{SaneblidzeUmble-comparingDiagonals} and explicitly relate it to their shift description, using a new proof that exploits the lattice description of the diagonal (\cref{sec:Shift-lattice}).
-We define an analogous encoding of the permutahedron as a subdivision of the cube, and transfer the cubical formulae to the $\LA$ diagonal via isomorphism.
+Then we construct an analogous cubical definition of the $\LA$ diagonal, transferring the cubical formulae via isomorphism.
 
 \subsubsection{The cubical $\SU$ diagonal}
+
 We define inductively a subdivision $\divcube{n-1}^\SU$ of the $(n-1)$-dimensional cube  which is combinatorially isomorphic to the permutahedron $\Perm$.
 
 \begin{construction}
@@ -4892,7 +4893,7 @@ We first prove in \cref{subsec:top-operadic-structures} that there are exactly t
 Then, we show that these topological operad structures are isomorphic (\cref{subsec:iso-top-operads}).
 However, these isomorphisms do not commute with the diagonal maps (\cref{ex:iso-not-Hopf,ex:iso-not-Hopf-2}).
 Finally, we show that contrary to the case of permutahedra, the faces of the $\LA$ and $\SU$ diagonals of the operahedra (\resp multiplihedra) are in general not in bijection (\cref{subsec:tensor-products}).
-However, from a homotopical point of view, the two tensor products of homotopy operads (\resp $\Ainf$-morphims) that they define are $\infty$-isomorphic (\cref{thm:infinity-iso,thm:infinity-iso-2}). 
+However, from a homotopical point of view, the two tensor products of homotopy operads (\resp $\Ainf$-morphisms) that they define are $\infty$-isomorphic (\cref{thm:infinity-iso,thm:infinity-iso-2}). 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -4907,7 +4908,7 @@ The permutahedra are part of a more general family of polytopes called Loday rea
 Let $\PT_n$ be the set of planar trees with $n$ internal edges, which are labelled by $[n]$ using the infix order.
 For every planar tree $t$, there is a corresponding operahedron $P_t$ whose codimension~$k$ faces are in bijection with nestings of $t$ with $k$ non-trivial nests.
 
-\begin{definition}[{\cite[Def.~2.1 \& 2.22]{LaplanteAnfossi}}]
+\begin{definition}[{\cite[Def.~2.1 \& 2.22]{LaplanteAnfossi}}]\label{def:nesting}
 	A \defn{nest} of $t \in \PT_n$ is a subset of internal edges which induce a subtree, and a \defn{nesting} of $t$ is a family of nests which are either included in one another, or disjoint.
 	See \cref{fig:nestings}.
 \end{definition}
@@ -4923,9 +4924,9 @@ For every planar tree $t$, there is a corresponding operahedron $P_t$ whose codi
 		}}
 	child{node(5){5}};
 % \begin{pgfonlayer}{bg}    % select the background layer
-\hedge[red, very thick]{0,2,1}{0.3cm}
+\hedge[blue, very thick]{0,2,1}{0.3cm}
 \hedge[blue, very thick]{0,2,3,1}{0.4cm}
-\hedge[green, very thick]{0,5,4,1}{0.5cm}
+\hedge[violet, very thick]{0,5,4,1}{0.5cm}
 %\end{pgfonlayer}
 \end{tikzpicture}
 \qquad
@@ -4940,16 +4941,16 @@ For every planar tree $t$, there is a corresponding operahedron $P_t$ whose codi
 		child{node(5){5}};
 	% \begin{pgfonlayer}{bg}    % select the background layer
 	\hedge[red, very thick]{2,3}{0.3cm}
-	\hedge[red, very thick]{0,5}{0.3cm}
-	\hedge[blue, very thick]{0,5,3}{0.4cm}
-	\hedge[green, very thick]{0,5,4,1}{0.5cm}
+	\hedge[blue, very thick]{0,5}{0.3cm}
+	\hedge[violet, very thick]{0,5,3}{0.4cm}
+	\hedge[violet, very thick]{0,5,4,1}{0.5cm}
 	%\end{pgfonlayer}
 \end{tikzpicture}
-\caption{Two nestings of a tree with $5$ internal edges.}
+\caption{Two nestings of a tree with $5$ internal edges. These nestings, \cref{def:nesting}, are also $2$-colored, \cref{def:2-Colored Nesting}.}
 \label{fig:nestings}
 \end{figure}
 
-Since the operahedra are generalized permutahedra~\cite[Coro.~2.16]{LaplanteAnfossi}, a choice of diagonal for the permuthedra induces a choice of diagonal for every operahedron~\cite[Coro.~1.31]{LaplanteAnfossi}.
+Since the operahedra are generalized permutahedra~\cite[Coro.~2.16]{LaplanteAnfossi}, a choice of diagonal for the permutahedra induces a choice of diagonal for every operahedron~\cite[Coro.~1.31]{LaplanteAnfossi}.
 Every face of an operahedron is isomorphic to a product of lower-dimensional operahedra, via an isomorphism~$\Theta$ which generalizes the one from \cref{subsec:operadicProperty}, see Point (5) of~\cite[Prop.~2.3]{LaplanteAnfossi}.
 
 \begin{definition}
@@ -4957,7 +4958,7 @@ An \emph{operadic diagonal} for the operahedra is a choice of diagonal $\triangl
 \end{definition}
 
 An operadic diagonal gives rise to topological operad structure on the set of Loday operahedra \cite[Thm 4.18]{LaplanteAnfossi}, and via the functor of cellular chains, to a universal tensor product of homotopy operads \cite[Prop. 4.27]{LaplanteAnfossi}. 
-Here, by \defn{universal} we mean a formula that applies uniformly to \emph{any} pair of homotopy operads. 
+Here, by \defn{universal}, we mean a formula that applies uniformly to \emph{any} pair of homotopy operads. 
 Since such an operad structure and tensor product are induced by a geometric diagonal, we shall call them \defn{geometric}.
 
 \begin{theorem}
@@ -4981,7 +4982,7 @@ Thus, these had to be the same from the start, which concludes the proof.
 
 Point (2) then follows from the fact that a choice of diagonal for the Loday realizations of the operahedra \emph{forces} a unique topological cellular colored operad structure on them, see~\cite[Thm.~4.18]{LaplanteAnfossi}.
 Since universal tensor products of homotopy operads are induced by a colored operad structure on the operahedra~\cite[Coro.~4.24]{LaplanteAnfossi}, we obtain Point~(3).
-Finally, since only vectors with strictly descreasing coordinates induce the generalized Tamari order on the skeleton of the operahedra~\cite[Prop.~3.11]{LaplanteAnfossi}, we get the last part of the statement. 
+Finally, since only vectors with strictly decreasing coordinates induce the generalized Tamari order on the skeleton of the operahedra~\cite[Prop.~3.11]{LaplanteAnfossi}, we get the last part of the statement. 
 \end{proof}
 
 This answers a question raised in~\cite[Rem.~3.14]{LaplanteAnfossi}.
@@ -4998,8 +4999,9 @@ The restriction of \cref{thm:operahedra} to the permutahedra associated with $2$
 Two other important families of operadic polytopes are the \emph{Loday associahedra} and \emph{Forcey--Loday multiplihedra}, which encode respectively $\Ainf$-algebras and $\Ainf$-morphisms~\cite[Prop.~4.9]{LaplanteAnfossiMazuir}, as well as $\Ainf$-categories and $\Ainf$-functors~\cite[Sect.~4.3]{LaplanteAnfossiMazuir}.
 For every linear tree $t \in \PT_n$, there is a corresponding Loday associahedron $\K_n$, whose faces are in bijection with nestings of $t$, and a Forcey--Loday multiplihedron $\J_n$ whose faces are in bijection with $2$-colored nestings of $t$.
 
-\begin{definition}[{\cite[Def. 3.2]{LaplanteAnfossiMazuir}}]
-	A \defn{$2$-colored nesting} is a nesting where each nest $N$ is either blue, red, or blue and red (purple), and which satisfies that if $N$ is blue or purple (\resp red or purple), then all nests contained in $N$ are blue (\resp red). \Guillaume{Add example?}
+\begin{definition}[{\cite[Def. 3.2]{LaplanteAnfossiMazuir}}]\label{def:2-Colored Nesting}
+	A \defn{$2$-colored nesting} is a nesting where each nest $N$ is either blue, red, or blue and red (purple), and which satisfies that if $N$ is blue or purple (\resp red or purple), then all nests contained in $N$ are blue (\resp red). 
+ 	See \cref{fig:nestings}.
 \end{definition}
 
 The Loday associahedra are faces of the Forcey--Loday multiplihedra: they correspond to $2$-colored nestings where all the nests are of the same color (either blue or red). 
@@ -5037,12 +5039,12 @@ Moreover, these diagonals commute with the map $\Theta$ for the Forcey--Loday mu
 
 By \cref{thm:unique-operadic}, we know that if one of the two choices $\LAD$ or $\SUD$ is made on a multiplihedron $\J_n$, one has to make the same choice on every lower-dimensional multiplihedra and associahedra appearing in the product decomposition of any face of~$\J_n$. 
 Now suppose that one makes two distinct choices for two multiplihedra $\J_n$ and $\J_{n'}$.
-It is easy to find a bigger multiplihedron $\J_{n''}$, for which $\J_n$ and $\J_{n'}$ appear in the produt decomposition of a face of $\J_{n''}$ and by the preceding remark, any choice of diagonal for $\J_{n''}$ will then contradict our initial two choices. 
+It is easy to find a bigger multiplihedron $\J_{n''}$, for which $\J_n$ and $\J_{n'}$ appear in the product decomposition of a face of $\J_{n''}$ and by the preceding remark, any choice of diagonal for $\J_{n''}$ will then contradict our initial two choices. 
 Thus, these had to be the same from the start, which conclude the proof of Point (1). 
 
-Point (2) then follows from the fact that a choice of diagonal for the Loday associahedra and the Forcey--Loday mutiplihedra \emph{forces} a unique topological cellular colored operad and operadic bimodule structure on them, see~\cite[Thm.~1]{MasudaThomasTonksVallette} and \cite[Thm.~1]{LaplanteAnfossiMazuir}.
+Point (2) then follows from the fact that a choice of diagonal for the Loday associahedra and the Forcey--Loday multiplihedra \emph{forces} a unique topological cellular colored operad and operadic bimodule structure on them, see~\cite[Thm.~1]{MasudaThomasTonksVallette} and \cite[Thm.~1]{LaplanteAnfossiMazuir}.
 Since a universal tensor products of $\Ainf$-algebras, and a compatible universal tensor products of $\Ainf$-morphisms are induced by an operad and operadic bimodule structures on the associahedra and multiplihedra respectively~\cite[Sec.~4.2.3]{LaplanteAnfossiMazuir}, we obtain Point~(3).
-Finally, since only vectors with strictly descreasing coordinates induce the Tamari-type order on the skeleton of the Loday multiplihedra~\cite[Prop. 2.10]{LaplanteAnfossiMazuir}, we get the last part of the statement. 
+Finally, since only vectors with strictly decreasing coordinates induce the Tamari-type order on the skeleton of the Loday multiplihedra~\cite[Prop. 2.10]{LaplanteAnfossiMazuir}, we get the last part of the statement. 
 \end{proof}
 
 This answers a question raised in~\cite[Rem.~3.9]{LaplanteAnfossiMazuir}.
@@ -5124,7 +5126,7 @@ P_{t'}\times P_{t''}
 For two interior points $(x,y) \in \mathring P_{t'}\times \mathring P_{t''}$, the diagram clearly commutes by definition, since $\Psi_{t'}$ and~$\Psi_{t''}$ are the identity in that case. 
 If $x$ is in a face $F=((\cdots((t_1 \circ_{i_1} t_2) \circ_{i_2} t_3) \cdots )\circ_{i_k} t_{k+1})$ of the boundary of~$P_{t'}$, then the lower composite is equal to $\circ_i^\SU (\circ_{i_1}^\SU \circ_{i_2}^\SU \cdots \circ_{i_k}^\SU \times \id)(\circ_{i_1}^\LA \circ_{i_2}^\LA \cdots \circ_{i_k}^\LA \times \id)^{-1}$, and so is the upper composite since $\Psi_t$ starts with the inverse $(\circ_i^\LA)^{-1}$ and the decomposition of~$F$ into $P_{t_1} \times \cdots \times P_{t_{k+1}} \times P_{t''}$ is unique.
 The case when $y$ is in the boundary of $P_{t''}$ is similar.  
-Finally, the compatibility of $\Psi$ with units and the symmetric group actions are straightfoward to check, see~\cite[Def.~4.17 \& Thm.~4.18]{LaplanteAnfossi}.
+Finally, the compatibility of $\Psi$ with units and the symmetric group actions are straightforward to check, see~\cite[Def.~4.17 \& Thm.~4.18]{LaplanteAnfossi}.
 \end{proof}
 
 \begin{remark}
@@ -5238,7 +5240,7 @@ Then, by \cite[Cor.~2]{DotsenkoShadrinVallette} there is an $\infty$-isotopy, th
 \end{proof}
 
 \begin{remark}
-None of the two diagonals $\LAD$ or $\SUD$ is cocommutative, or coassociative, as is the special case of $\Ainf$-algebras \cite[Thm. 13]{MarklShnider}. 
+Neither of the two diagonals $\LAD$ or $\SUD$ are cocommutative, or coassociative, as they are special cases of $\Ainf$-algebras \cite[Thm. 13]{MarklShnider}. 
 \end{remark}
 
 Note that restricting to linear trees, the two tensor products of $\Ainf$-algebras induced by the $\LA$ and $\SU$ diagonals coincide (and are thus strictly isomorphic).
@@ -5594,17 +5596,17 @@ To compute these numbers, we first computed the facets of the $\LA$ and $\SU$ di
 
 \begin{remark}
 The lack of symmetry in the trees in \cref{fig:trees} arises from the lack of symmetry inherent in the infix order, and in how the $\LA$ and $\SU$ diagonal treat maximal and minimal elements.
-A sufficient condition for the diagonals of a tree $t$ to have the same number of facets to satisfy that $N$ is a nesting of $t$ if and only if $rN$ is a nesting of $t$.
+A sufficient condition for the diagonals of a tree $t$ to have the same number of facets is to satisfy, $N$ is a nesting of $t$ if and only if $rN$ is a nesting of $t$.
 For a tree satisfying this condition, relabelling its edges via the function $r : [n]\to [n]$ defined by $r(i)\eqdef n-i+1$ exchanges the number of facets between the $\LA$ and $\SU$ diagonals.
 \end{remark}
 
 We have an analogous result for universal tensor products of $\Ainf$-morphisms. 
 Let $\Ainf^2$ denote the $2$-colored operad whose algebras are pairs of $\Ainf$-algebras together with an $\Ainf$-morphism between them \cite[Sec.~4.4.1]{LaplanteAnfossiMazuir}.
-The datum of a diagonal of the operad $\Ainf$ encoding $\Ainf$-algebras and a diagonal of the operadic bimodule $\mathrm{M}_\infty$ enconding $\Ainf$-morphisms is equivalent to the datum of a morphism of $2$-colored operads $\Ainf^2 \to \Ainf^2 \otimes \Ainf^2$. 
+The datum of a diagonal of the operad $\Ainf$ encoding $\Ainf$-algebras and a diagonal of the operadic bimodule $\mathrm{M}_\infty$ encoding $\Ainf$-morphisms is equivalent to the datum of a morphism of $2$-colored operads $\Ainf^2 \to \Ainf^2 \otimes \Ainf^2$. 
 
 \begin{theorem}
 	\label{thm:infinity-iso-2}
-	For any pair of $\Ainf$-morphims, the two universal tensor products defined by the $\LA$ and $\SU$ diagonals are not isomorphic in the category of $\Ainf^2$-algebras and strict morphisms.
+	For any pair of $\Ainf$-morphisms, the two universal tensor products defined by the $\LA$ and $\SU$ diagonals are not isomorphic in the category of $\Ainf^2$-algebras and strict morphisms.
 	However, they are isomorphic in the category of $\Ainf^2$-algebras and their $\infty$-morphisms.
 \end{theorem}
 
