Added reference Loday

--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -516,6 +516,17 @@
    SCHOOL ={University of California, Berkeley},
    YEAR = {2011},}
 
+@incollection{Loday,
+  title = {The Diagonal of the {{Stasheff}} Polytope},
+  booktitle = {Higher Structures in Geometry and Physics},
+  author = {Loday, Jean-Louis},
+  year = {2011},
+  series = {Progr. {{Math}}.},
+  volume = {287},
+  pages = {269--292},
+  publisher = {{Birkh\"auser/Springer, New York}}
+}
+
 @article{palacios2004weak,
   title = {Weak {{Bruhat}} Order on the Set of Faces of the Permutohedron and the Associahedron},
   author = {Palacios, Patricia and Ronco, Mar{\'i}a O.},
